--- a/training/agenda_lists/index.html
+++ b/training/agenda_lists/index.html
@@ -5,11 +5,11 @@
   <title>Agenda</title>
 
   <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-  <link rel="import" href="elements/contacts-app/contacts-app.html">
+  <link rel="import" href="elements/agendas-lists/agendas-lists.html">
 
 </head>
 <body style="background:lightgray;">
 <h1 style="text-align: center">Agenda</h1>
-  <contacts-app></contacts-app>
+  <agendas-lists></agendas-lists>
 </body>
 </html>
