--- a/training/agenda/index.html
+++ b/training/agenda/index.html
@@ -8,8 +8,8 @@
   <link rel="import" href="elements/contacts-app/contacts-app.html">
 
 </head>
-<body style="background:lightgray;">
-<h1 style="text-align: center">Agenda</h1>
+<body style="background:#eaeaea;">
+<h1 style="text-align: center; color: rgba(30, 139, 143, 1); font-weight:bold; font-family: Tahoma;">Agenda</h1>
   <contacts-app></contacts-app>
 </body>
 </html>
