Fixed mail text presentation inside paper-button

--- a/training/agenda/elements/contact-card/contact-card.html
+++ b/training/agenda/elements/contact-card/contact-card.html
@@ -39,6 +39,7 @@
       display: block;
       font-size: 11px;
       margin: 10px auto;
+      overflow: hidden;
       text-align: center;
     }
 
