Fixed mail text centering as paper button content

--- a/training/agenda/elements/contact-card/contact-card.html
+++ b/training/agenda/elements/contact-card/contact-card.html
@@ -39,7 +39,7 @@
       display: block;
       font-size: 11px;
       margin: 10px auto;
-      overflow: hidden;
+
       text-align: center;
     }
 
@@ -52,13 +52,14 @@
     }
 
     .email_icon {
-      display: inline-block;
-      margin: 10px;
+      display: block;
+      margin: auto;
       --iron-icon-fill-color: rgba(30, 139, 143, 0.7);
     }
 
     .email_button {
-      width: 80%;
+      overflow: hidden;
+      width: 90%;
       --paper-button-ink-color: rgba(30, 139, 143, 0.7);
     }
 
